WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
199629
Fix validation of method signature in decodeInvocation()
https://bugs.webkit.org/show_bug.cgi?id=199629
Summary
Fix validation of method signature in decodeInvocation()
Chris Dumez
Reported
2019-07-09 11:58:14 PDT
Fix validation of method signature in decodeInvocation().
Attachments
Patch
(1.86 KB, patch)
2019-07-09 11:59 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-07-09 11:58:30 PDT
<
rdar://problem/52731659
>
Chris Dumez
Comment 2
2019-07-09 11:59:45 PDT
Created
attachment 373739
[details]
Patch
WebKit Commit Bot
Comment 3
2019-07-09 13:28:21 PDT
Comment on
attachment 373739
[details]
Patch Clearing flags on attachment: 373739 Committed
r247274
: <
https://trac.webkit.org/changeset/247274
>
WebKit Commit Bot
Comment 4
2019-07-09 13:28:23 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug