Fix validation of method signature in decodeInvocation() https://bugs.webkit.org/show_bug.cgi?id=199629 <rdar://problem/52731659>

Reviewed by Dan Bernstein.

The decoder was mistakenly assigning remoteMethodSignature to localMethodSignature
before comparing remoteMethodSignature and localMethodSignature, thus making the
check useless.

* Shared/API/Cocoa/WKRemoteObjectCoder.mm:
(decodeInvocation):


Canonical link: https://commits.webkit.org/213522@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247274 268f45cc-cd09-0410-ab3c-d52691b4dbfc